Fix: About image size added to preventp aspect-ratio distorting

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -16,10 +16,34 @@
 	display: flex;
 	width: 90%;
 	margin: auto;
+	position: relative;
+	overflow: hidden;
 }
 
 .AboutList {
 	line-height: 1.6em;
+}
+
+.AboutImg {
+	padding-right: 20px;
+}
+
+.imageContainer {
+	position: relative;
+	width: 50%;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.AboutText {
+	width: 50%;
+	padding-left: 20px;
+}
+
+.AboutText li {
+	margin-left: 15px;
 }
 
 @media (max-width: 768px) {
@@ -30,23 +54,12 @@
 		width: 100%;
 	}
 
+	.imageContainer {
+		width: 100%;
+	}
+
 	.AboutText {
 		width: 100% !important;
 		margin-top: 20px;
 	}
-}
-
-.AboutImg {
-	width: 50%;
-	height: auto !important;
-	padding-right: 20px;
-}
-
-.AboutText {
-	width: 50%;
-	padding-left: 20px;
-}
-
-.AboutText li {
-	margin-left: 15px;
 }
